--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "my-products-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Products Management web application using ReactJS with Vite, TypeScript, Tailwind CSS, and Appwrite as the backend.",
+  "keywords": [
+    "vite",
+    "react",
+    "tailwindcss"
+  ],
+  "license": "MIT",
+  "author": {
+    "name": "Phu DO",
+    "email": "dvphu79@gmail.com",
+    "url": "https://github.com/dvphu79/my-products-app"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,8 +22,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.0.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -21,9 +37,14 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-config-prettier": "^10.0.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "globals": "^16.0.0",
+    "prettier": "^3.4.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
