--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,14 +6,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@components/*": ["./src/components/*"],
-      "@images/*": ["./src/images/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@/*": ["./src/*"]
     },
 
     /* Bundler mode */
